BUG fix #12 Warning date_default_timezone_get() sur la page d'installation
BUG fix #13 Warning date_default_timezone_get() dans les flux rss
BUG fix #17 Administration: mauvaise pagination lorsque le filtre par catégorie est appliqué sur la page des articles
BUG fix #19 Administration: Notice à la rédaction d'un article si date de publication erronée
BUG Réglage du focus sur le bouton Installer de la page d'installation

## PLUXML 5.1.7 (sortie : 25/01/2013) ##

[+] Les fichiers de parametres des plugins sont désormais stockés dans le dossier de configuration de PluXml
[+] plxShow:tagList(): gestion de la taille des tags (#tag_size)
[+) plxShow: ajout du hook plxShowTagFeed
[+] plxShow: ajout de la fontion tagFeed() : flux rss des articles pour un mot clé
[+] plxShow: ajout de la méthode artCatIds()
[+] plxShow: ajout de la méthode artActiveCatId()
[+] plxShow:pageTitle() : positionnement du titre du site en dernier pour améliorer les référencements (contribution Jos)
[+] plxShow:pagination() : suppression duplicate content entre la page1 et la page d'accueil
[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[+] plxShow::catDescription() : ajout format affichage #cat_description
[+] plxAdmin::htaccess() : pas d'écrasement et perte du contenu du fichier .htaccess s'il existe déjà + ajout du hook plxAdminHtaccess
[+] plxPlugin: ajout de la fonction setAdminMenu pour personnaliser le menu permettant d'accèder à la page admin.php d'un plugin
[+] plxFeed: ajouts des hooks plxFeedRssArticlesXml, plxFeedRssCommentsXml, plxFeedAdminCommentsXml
[+] plxFeed: changement du nom des méthodes getAdminCommentaires, getRssCommentaires en getAdminComments et getRssComments
[+] Administration: sidebar statique
[+] Administration: Edition article : ajout du champ "Lien de l'article" et du lien "voir" pour accéder à l'article
[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins